crates/moire-source-context/src/snapshots/moire_source_context__tests__enclosing_fn_impl_method.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# Foo::async fn run(&self)
# scope 5..5

   5 >|         spawn(async move { a });
