crates/moire-source-context/src/snapshots/moire_source_context__tests__enclosing_fn_impl_method.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# Foo::async fn run(&self)
# scope 4..5

   4  |         let a = 1;
   5 >|         spawn(async move { a });
