crates/moire-source-context/src/snapshots/moire_source_context__tests__enclosing_fn_inside_closure.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# fn run()
# scope 3..5

   3  |     v.iter().for_each(|x| {
      | ...
   5  |     });
