crates/moire-source-context/src/snapshots/moire_source_context__tests__enclosing_fn_inside_closure.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# fn run()
# scope 2..5

   2  |     let v: Vec<u32> = vec![1, 2, 3];
   3  |     v.iter().for_each(|x| {
   4 >|         spawn(async move { *x });
   5  |     });
