crates/moire-source-context/src/snapshots/moire_source_context__tests__enclosing_fn_module_and_return_type.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# demo::Worker::run(&self) -> Result<(), String>
# scope 4..4

   4 >|             do_stuff();
