crates/moire-source-context/src/snapshots/moire_source_context__tests__enclosing_fn_module_and_return_type.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# demo::Worker::fn run(&self) -> Result<(), String>
# scope 4..4

   4 >|             do_stuff();
