crates/moire-source-context/src/snapshots/moire_source_context__tests__enclosing_fn_self_mut_ref.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# Handler::async fn handle(&mut self, req: Request, ctx: Context)
# scope 3..3

   3 |         spawn(async move { req });
