crates/moire-source-context/src/snapshots/moire_source_context__tests__enclosing_fn_strips_pub_crate.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# async Worker::run(&self) -> Result<(), String>
# scope 3..3

   3 >|         do_stuff();
