crates/moire-source-context/src/snapshots/moire_source_context__tests__enclosing_fn_strips_pub_crate.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# Worker::async fn run(&self) -> Result<(), String>
# scope 3..3

   3 >|         do_stuff();
